Changed Stat comparisons menu page styling to be more modern, yellow and rounding. Gave main, root, body overflow and width/height properties to prevent overflow and white spacing.

--- a/src/Pages/SportsPage/NHLHomePage/NHL.scss
+++ b/src/Pages/SportsPage/NHLHomePage/NHL.scss
@@ -1,11 +1,12 @@
 .nhl-main-container{
-    width: 100vw;
-    min-height: 100vh;
+    width: 100%;
+    min-height: 100%;
     background: radial-gradient(163.19% 93.36% at 50% 46.95%, #28282C 0%, #1A1A1D 34.38%, #2C2C30 61.98%, #1A1A1D 100%);
     overflow: hidden;
     display: flex;
     align-items: center;
     flex-flow: column;
+    overflow: hidden;
     .nhl-title{
         width: 100%;
         text-align: center;
@@ -20,24 +21,26 @@
         justify-content: center;
         flex-direction: column;
         align-items: center;
-        margin-top: 2rem;
+        margin: 2rem;
         .nhl-compare-link-container{
-            background-color: rgb(255, 0, 0);
-            .nhl-link-container{
-                padding: 2rem 10rem 2rem 10rem;
+            width: 75%;
+            a{
+                text-decoration: none;
+            }
+            .compare-link{
+                padding: 1rem 0 1rem 0;
+                border-radius: 25px;
                 margin: 1rem;
-                background-color:rgba(0, 0, 255, 0.249);
-                a{
-                    text-decoration: inherit;
-                    color: inherit;
-                    div{
-                        font-size: 1rem;
-                        color: hsl(47, 100%, 50%);
-                        font-family: "Viga", Times, serif;
-                        width: 100%;
-                        text-align: center;
-                        color:black;
-                    }
+                background-color:hsl(47, 100%, 50%);
+                display: grid;
+                place-items: center;
+                div{
+                    font-size: 1rem;
+                    color: hsl(0, 0%, 0%);
+                    font-family: "Viga", Times, serif;
+                    width: 100%;
+                    text-align: center;
+                    text-decoration: none;
                     }
             }
         }
