--- a/src/main-styles.scss
+++ b/src/main-styles.scss
@@ -3,4 +3,17 @@
 body{
     margin: 0;
     padding: 0;
+    overflow: hidden;
+}
+
+.Main{
+    overflow: hidden;
+    max-width: 100vw;
+    height: 100vh;
+}
+
+.root{
+    max-width: 100vw;
+    height: 100vh;
+    overflow: hidden;
 }
